--- a/index.html
+++ b/index.html
@@ -16,17 +16,29 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>   
 </head>
 <body>
-    <div class=container>
-            <br>
-            <br>
-            <div class="jumbotron">
-                <h1 class="display-4">Volorg</h1>
-                <div class="row align-items-center justify-content-center">
-                <button type="button" class="btn btn-primary btn-lg" id="vol" data-toggle="modal" data-target="#volModal">Volunteer</button>
-           
-                <button type="button" class="btn btn-secondary btn-lg" id="org" data-toggle="modal" data-target="#orgModal">Organization</button>
-                </div>
-            </div>
+    <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                    <div>
+                    <img src="assets/img/volunteerHands.png">
+                    <a class="navbar-brand" href="#">Volorg</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    </div>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Find Opportunities</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Post Opportunities</a>
+                        </li>
+                      </ul>
+                    </div>
+            </nav>
   </div>
 
 <!--Volunteer Modal-->
