--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <!-- Local styling -->
         <link rel="stylesheet" href="assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Arimo|Didact+Gothic|Anton|Arvo|Roboto+Slab|Comfortaa:300" rel="stylesheet">
+
         <!-- Bootstrap jQuery -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>   
 </head>
 <body>
-    <div class="container-fluid">
+        <div class="section1">
             <nav class="navbar navbar-expand-lg navbar-light">
                     <div>
                     <img src="assets/img/volunteerHands.png">
@@ -39,7 +41,23 @@
                       </ul>
                     </div>
             </nav>
-  </div>
+
+        <div id="stuff">
+            <div class="welcome">
+                <h1>Welcome to Volorg</h1>
+                <p>A place to connect volunteers with volunteer opportunities</p>
+            </div>
+            <div class="buttons">
+                <button type="button" class="btn btn-lg" id="vol" data-toggle="modal" data-target="#volModal">Find Opportunities</button>
+                <button type="button" class="btn btn-lg" id="org" data-toggle="modal" data-target="#orgModal">Post Opportunities</button>
+            </div>
+        </div>
+    </div>
+
+        <div class="section2">
+            <p>Connecting volunteers with volunteer opportunities.</p> 
+        </div>
+
 
 <!--Volunteer Modal-->
 
