--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 </head>
 
 <body>
@@ -37,13 +40,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About |</a>
+                    <a class="nav-link" href="#dropdown1">About Us |</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Find Opportunities |</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Post Opportunities</a>
+                    <a class="nav-link" href="#">Post Opportunities |</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="#">Register |</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="#">Sign-In</a>
                 </li>
             </ul>
         </div>
@@ -65,7 +74,10 @@
     </div>
 
     <div class="section2">
-        <button class="collapsible">About Us</button>
+
+        <button class="collapsible" id="dropDown1">
+        <i class="fas fa-angle-double-down"></i> About Us
+        </button>
         <div class="content">   
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin libero lacus, finibus ac leo eget, scelerisque vehicula
             urna. Vivamus a velit sed diam tristique tincidunt non non ligula. Pellentesque varius erat non ex eleifend sagittis.
@@ -74,8 +86,8 @@
             odio sagittis ipsum venenatis consectetur. Donec sed tempus est.</p>
         </div>
 
-        <button class="collapsible">The Mission</button>
-        <div class="content">   
+        <button class="collapsible" id="dropDown2"> <i class="fas fa-angle-double-down"></i>  The Mission</button>
+        <div class="content" id="collapse1">   
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin libero lacus, finibus ac leo eget, scelerisque vehicula
             urna. Vivamus a velit sed diam tristique tincidunt non non ligula. Pellentesque varius erat non ex eleifend sagittis.
             Pellentesque lacinia dolor in faucibus iaculis. Nullam eu metus leo. Donec metus magna, vulputate vitae sodales
@@ -84,8 +96,8 @@
         </div>
         
  
-        <button class="collapsible">Frequently Asked Questions</button>
-        <div class="content">   
+        <button class="collapsible" id="dropDown3"> <i class="fas fa-angle-double-down"></i>  Frequently Asked Questions</button>
+        <div class="content" id="collapse2">   
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin libero lacus, finibus ac leo eget, scelerisque vehicula
             urna. Vivamus a velit sed diam tristique tincidunt non non ligula. Pellentesque varius erat non ex eleifend sagittis.
             Pellentesque lacinia dolor in faucibus iaculis. Nullam eu metus leo. Donec metus magna, vulputate vitae sodales
@@ -93,8 +105,8 @@
             odio sagittis ipsum venenatis consectetur. Donec sed tempus est.</p>
         </div>
 
-        <button class="collapsible">Contact Us</button>
-        <div class="content">   
+        <button class="collapsible" id="dropDown4"> <i class="fas fa-angle-double-down"></i>  Contact Us</button>
+        <div class="content" id="collapse3">   
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin libero lacus, finibus ac leo eget, scelerisque vehicula
             urna. Vivamus a velit sed diam tristique tincidunt non non ligula. Pellentesque varius erat non ex eleifend sagittis.
             Pellentesque lacinia dolor in faucibus iaculis. Nullam eu metus leo. Donec metus magna, vulputate vitae sodales
