mobile responsive opps and profile

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <p>A place to connect volunteers with volunteer opportunities</p>
             </div>
             <div class="buttons">
-                <a href="./opps.html"><button type="button" class="btn btn-lg" id="vol">Find Opportunities</button></a>
-                <button type="button" class="btn btn-lg" id="org">Post Opportunities</button>
+                <a href="./opps.html"><button type="button" class="btn btn-lg greenButton" id="vol">Find Opportunities</button></a>
+                <button type="button" class="btn btn-lg greenButton" id="org">Post Opportunities</button>
             </div>
         </div>
     </div>
